--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf/pdfkit": "^3.0.2",
+    "@react-pdf/renderer": "^3.1.14",
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
+    "react-pdf": "^7.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
